app/app.css
@import "tailwindcss";

/*

This stylesheet is for global styles only. 
Please style individual elements in separate dedicated stylesheets

*/

@theme {
  --font-sans: "Oxygen", ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

  /* Old colors for compatibility */
  --color-seagreen: var(--color-primary-light);
  --color-turquoise: var(--color-primary-dark);
  --color-betta: var(--color-secondary-light);
  --color-tarawera: var(--color-secondary-dark);
  --color-potassium: var(--color-disabled-light);
  /*--color-gray-300 replaced with --color-gray-light*/
  /*--color-zinc-800 replaced with --color-gray-dark*/
  /*--color-emerald-100 replaced with color-primary-extralight*/

  /* New colors */
  --color-primary-light: #74C9B5;
  --color-primary-dark: #1EA493;
  --color-secondary-light: #136E8D;
  --color-secondary-dark: #063751;
  --color-gray-light: var(--color-gray-300);
  --color-gray-dark: var(--color-zinc-800);
  --color-primary-extralight: var(--color-emerald-100);
  --color-disabled-light: #8b9d9b;
  --color-disabled-dark: #404547;
  --color-selection-highlight: #4388A1;
  --color-error: #c2162d;
  --color-error-dark: #a01225;
  --color-error-extradark: #7a0e1d;
  --color-slate-100: #f1f5f9;

}

html,
body {
  @apply bg-white;
  --position-top: 0;
}

.noscroll {
  position: fixed;
  top: var(--position-top, 0);
  inline-size: 100%;
  overflow-y: scroll;
}


/* TEXT ***********************************************************************/

::selection {
  /* color: #c2162d; */
  background-color: var(--color-selection-highlight);
  color: var(--color-white);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Quicksand";
  font-weight: 500;
  margin-bottom: calc(var(--spacing) * 2);
  transition: 0.2s;
}

h1 {
  font-size: 2.5rem;
  color: var(--color-primary-light);
  text-transform: uppercase;
}

h2 {
  font-size: 2rem;
  color: var(--color-primary-dark);
  text-transform: uppercase;
}

h3 {
  font-size: 1.7rem;
  color: var(--color-secondary-light);
  text-transform: uppercase;
}

h4 {
  font-size: 1.7rem;
  color: var(--color-secondary-light);
}

h5 {
  font-size: 1.5rem;
  color: var(--color-secondary-light);
}

h6 {
  font-size: 1.2rem;
  color: var(--color-secondary-light);
}

a h1:hover,
a h2:hover {
  color: var(--color-secondary-light);
}

a h3:hover,
a h4:hover,
a h5:hover,
a h6:hover {
  color: var(--color-primary-light);
}

p {
  margin-bottom: calc(var(--spacing) * 2);
  white-space: pre-line;
}

p:last-of-type {
  margin-bottom: 0;
}

a,
.link {
  color: var(--color-primary-dark);
  transition: 0.2s;
}

a:hover,
.link:hover {
  color: var(--color-primary-light);
  cursor: pointer;
}

p a,
li a {
  /* color: var(--color-primary-dark); */
  border-bottom: 1px solid;
  border-color: var(--color-primary-dark);
}

p a:hover,
li a:hover {
  border-color: var(--color-primary-light);
}

#menu .link {
  color: var(--color-black);
}

#menu .link:hover {
  color: var(--color-primary-light);
  cursor: pointer;
}

ul {
  list-style-type: disc;
  margin-left: 1rem;
  margin-bottom: calc(var(--spacing) * 2);
}

ol {
  list-style-type: decimal;
  margin-left: 1rem;
  margin-bottom: calc(var(--spacing) * 2);
}


/* BUTTONS ********************************************************************/

.button {
  background-color: var(--color-primary-dark);
  padding: calc(var(--spacing) * 2) calc(var(--spacing) * 4);
  border: 2px solid var(--color-primary-dark);
  border-radius: var(--radius-md);
  color: var(--color-white);
  text-align: center;
  transition: 0.2s;
}

.button:hover {
  color: white;
  background-color: var(--color-secondary-light);
  border-color: var(--color-secondary-light);
  cursor: pointer;
}

.button:hover:active {
  background-color: var(--color-secondary-dark);
  border-color: var(--color-secondary-dark);
}

.button.button-light {
  background-color: var(--color-white);
  color: var(--color-primary-dark);
}

.button.button-light:hover {
  background-color: var(--color-white);
  color: var(--color-secondary-light);
  cursor: pointer;
}

.button.button-light:hover:active {
  color: var(--color-secondary-dark);
}

.button.button-disabled,
button:disabled.button {
  background-color: var(--color-disabled-light);
  border: 2px solid var(--color-disabled-light);
  cursor: default;
}

.button.button-light.button-disabled,
button:disabled.button.button-light {
  background-color: var(--color-white);
  border: 2px solid var(--color-disabled-light);
  color: var(--color-disabled-light);
  cursor: default;
}

.button.button-pg {
  width: calc(var(--spacing) * 10);
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.button.button-pg.button-light {
  transition: 0s;
}

.button.button-pg-arrow {
  width: calc(var(--spacing) * 14);
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.7rem;
}

.button.button-delete {
  background-color: var(--color-error);
  border-color: var(--color-error);
  color: var(--color-white);
}

.button.button-delete:hover {
  background-color: var(--color-error-dark);
  border-color: var(--color-error-dark);
}

.button.button-delete:hover:active {
  background-color: var(--color-error-extradark);
  border-color: var(--color-error-extradark);
}

.button.button-light.button-delete {
  background-color: var(--color-white);
  color: var(--color-error);
  border-color: var(--color-error);
}

.button.button-light.button-delete:hover {
  background-color: var(--color-white);
  color: var(--color-error-dark);
  border-color: var(--color-error-dark);
}

.button.button-light.button-delete:hover:active {
  color: var(--color-error-extradark);
  border-color: var(--color-error-extradark);
}

.button-icon {
  color: var(--color-primary-dark);
  transition: 0.2s;
}

.button-icon:hover {
  color: var(--color-secondary-dark);
  cursor: pointer;
}
/* ... */

